# conjugate

./: meson.build
include/conjugate/: conjugate.hpp
source/: main.cpp
tests/: matrix-operation.cpp  meson.build  vector-operation.cpp
